# mattilda_challenge

./: CONTRIBUTING.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_indexes.py
docs/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md  ADR-007.md  ADR-008.md  ADR-009.md  ADR-010.md
scripts/: run_alembic_migrations.sh  seed_database.py
src/mattilda_challenge/: config.py
src/mattilda_challenge/application/: common.py  dtos.py  filters.py
src/mattilda_challenge/application/dtos/: __init__.py  student_account_statement.py
src/mattilda_challenge/application/ports/: __init__.py  invoice_repository.py  payment_repository.py  school_account_statement_cache.py  school_repository.py  student_account_statement_cache.py  student_repository.py  time_provider.py  unit_of_work.py
src/mattilda_challenge/application/use_cases/: __init__.py  cancel_invoice.py  create_invoice.py  create_school.py  create_student.py  delete_school.py  delete_student.py  get_school_account_statement.py  get_student_account_statement.py  list_invoices.py  list_payments.py  list_schools.py  list_students.py  record_payment.py  requests.py  update_school.py  update_student.py
src/mattilda_challenge/domain/: exceptions.py  validate_utc_timestamp.py
src/mattilda_challenge/domain/entities/: __init__.py  invoice.py  payment.py  school.py  student.py
src/mattilda_challenge/domain/value_objects/: __init__.py  entity_id.py  invoice_id.py  invoice_status.py  late_fee_policy.py  payment_id.py  school_id.py  student_id.py  student_status.py
src/mattilda_challenge/entrypoints/: __init__.py
src/mattilda_challenge/entrypoints/http/: __init__.py  app.py  dependencies.py
src/mattilda_challenge/entrypoints/http/dtos/: __init__.py  account_statement_dtos.py  common_dtos.py  health_dtos.py  invoice_dtos.py  payment_dtos.py  (+2 more)
src/mattilda_challenge/infrastructure/adapters/: __init__.py  time_provider.py
src/mattilda_challenge/infrastructure/observability/: __init__.py  logging.py  metrics.py  request_id.py
src/mattilda_challenge/infrastructure/postgres/: database.py  unit_of_work.py
src/mattilda_challenge/infrastructure/redis/: client.py
tests/integration/: __init__.py  conftest.py
tests/unit/: conftest.py  test_config.py
tests/unit/application/: test_common.py
tests/unit/application/use_cases/: test_account_statement_use_cases.py  test_invoice_use_cases.py  test_payment_use_cases.py  test_school_use_cases.py  test_student_use_cases.py
tests/unit/domain/: test_validate_utc_timestamp.py
tests/unit/domain/entities/: test_invoice.py  test_payment.py  test_school.py  test_student.py
tests/unit/domain/value_objects/: test_entity_ids.py  test_late_fee_policy.py
tests/unit/entrypoints/: __init__.py
tests/unit/entrypoints/http/: __init__.py  conftest.py
tests/unit/infrastructure/adapters/: test_time_provider.py
tests/unit/infrastructure/postgres/: test_unit_of_work.py
(+88 files in other folders)
